fixing font-size + custom cursom cursor off on mobile version

--- a/src/styles/components/accordion.scss
+++ b/src/styles/components/accordion.scss
@@ -114,4 +114,7 @@
   .info {
     gap: 0;
   }
+  .txt-container {
+    font-size: 12px;
+  }
 }
