--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -105,6 +105,7 @@
 
 @media screen and (max-width: 768px) {
   .menu-container {
+    font-size: 12px;
     flex-direction: column;
     .menu {
       width: 100%;
